2006-05-02  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-enums.[ch]: added enum GimpPlugInCallMode
	which can be one of { NONE, QUERY, INIT, RUN }.

	* app/plug-in/Makefile.am
	* app/plug-in/gimppluginmanager-run.[ch]: removed again...

	* app/plug-in/gimppluginmanager-call.[ch]: ...and added
	here. Added gimp_plug_in_manager_call_init() and
	gimp_plug_in_manager_call_query().

	* app/plug-in/plug-in.[ch]: removed plug_in_call_query() and
	plug_in_call_init().

	(struct PlugIn): removed members "init", "query" and "synchronous".

	(plug_in_open): added parameters "call_mode" and "synchronous".

	* app/plug-in/gimppluginmanager.c
	* app/plug-in/plug-in-message.c
	* app/pdb/gimppluginprocedure.c
	* app/pdb/gimptemporaryprocedure.c
	* tools/pdbgen/pdb/plug_in.pdb: changed accordingly.

	* app/pdb/plug_in_cmds.c: regenerated.

2006-05-02  Sven Neumann  <sven@gimp.org>

	* app/dialogs/user-install-dialog.c: code cleanup, rephrased radio
	button labels.

2006-05-02  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainercombobox.c
	(gimp_container_combo_box_remove_item): turned a #warning into an
	explanation because the bug it referred to is marked as WONTFIX.

2006-05-02  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpproceduraldb.[ch] (gimp_procedural_db_set_data):
	added const qualifier.

2006-05-02  Sven Neumann  <sven@gimp.org>

	* fileicon.ico
	* wilber.ico: new icons for the Windows build created by Jernej
	Simončič based on the icons drawn by Jimmac (bug #340223).

2006-04-29  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in.[ch]: removed plug_in_push() and
	plug_in_pop()...

	* app/plug-in/gimppluginmanager.[ch]: ...and added them here as
	gimp_plug_in_manager_plug_in_push() and _pop()

	* app/plug-in/plug-in-message.c (plug_in_handle_proc_run): changed
	accordingly.

	* app/plug-in/plug-in.c (plug_in_close): removed an unused
	variable, moved another one to a local scope.

	* app/plug-in/plug-in.h: indentation.
